# metadata-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: endpoints.py
app/core/: chain_setup.py  chain_setup_eov.py  chain_setup_metadata.py  models.py  prompts.py
app/schemas/: eov.py  feedback.py  metadata.py
app/services/: metadata_transform.py
app/utils/: helpers.py
tests/: test_api.py
