[tool.poetry]
name = "observia-backend-metadata"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.13"
langchain-cli = "^0.0.35"
langchain-openai = "^0.2.12"
httpx = "0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
